QWindowsFormatInfo: optimize creation time a bit

Querying the Media Foundation _only_ for the audio and video codecs
actually used, instead of querying _all_ codecs installed in the
system. On a default Win 10 setup, it's in 10-15% faster than
previous approach. On systems with additional codecs installed,
this may even be faster.

Pick-to: 6.5 6.6
Task-number: QTBUG-116075
Change-Id: Ib5b572bddd21fa1dfaa1b120a7e48345ea6a1bc1
Reviewed-by: Artem Dyomin <artem.dyomin@qt.io>